--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "dynamic-html-pdf": "0.0.4",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "file-system": "^2.2.2",
     "fs": "0.0.1-security",
     "html-pdf": "^2.2.0",
     "html-template-pdf": "^1.0.3",
+    "json2csv": "^4.3.5",
     "moment": "^2.24.0",
+    "mongo-xlsx": "^1.0.12",
     "mongoose": "^5.4.16",
     "morgan": "^1.9.1",
-    "path": "^0.12.7",
-    "puppeteer": "^1.13.0"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "eslint": "^5.15.1",
