--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.5.3",
-    "dynamic-html-pdf": "0.0.4",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "file-system": "^2.2.2",
+    "file-system-cache": "^1.0.5",
     "fs": "0.0.1-security",
     "html-pdf": "^2.2.0",
-    "html-template-pdf": "^1.0.3",
     "json2csv": "^4.3.5",
-    "moment": "^2.24.0",
     "mongo-xlsx": "^1.0.12",
     "mongoose": "^5.4.16",
     "morgan": "^1.9.1",
